--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ global:
   map_size: [2800, 1500]  # 战场地图尺寸
 
 serial: # 串口
-  port: 'COM9'
+  port: 'COM12'
   baudrate: 115200
   timeout: 1
 
@@ -44,10 +44,10 @@ blind_zone:
   base_time: 3.0  # 基础预测时间
   offset_time: 1.7  # 时间偏移量(根据上一帧的信道占用数动态调整单点预测时间)
   points:
-    R1: [[625, 1212], [2645, 700]]
+    R1: [[625, 1212], [2645, 700]] # 一个点在蓝方基地后，防偷家
     R2: [[921, 747], [1336, 813]]
     R7: [[661, 745], [441, 747]]
-    B1: [[1990, 300], [85, 750]]
+    B1: [[1990, 300], [85, 750]] # 一个点在红方基地后，防偷家
     B2: [[1900, 755], [1460, 688]]
     B7: [[2142, 747], [2337, 750]]
 
