--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ global:
   map_size: [2800, 1500]  # 战场地图尺寸
 
 serial: # 串口
-  port: 'COM12'
+  port: 'COM13'
   baudrate: 115200
   timeout: 1
 
@@ -20,6 +20,7 @@ filter:
     max_inactive_time: 2.0
 
 paths:
+  test_img: 'images/test_image.jpg' # 测试图片
   calibration:
     red: 'arrays_test_red.npy' # 加载标定好的仿射变换矩阵
     blue: 'arrays_test_blue.npy'
@@ -44,12 +45,12 @@ blind_zone:
   base_time: 3.0  # 基础预测时间
   offset_time: 1.7  # 时间偏移量(根据上一帧的信道占用数动态调整单点预测时间)
   points:
-    R1: [[625, 1212], [2645, 700]] # 一个点在蓝方基地后，防偷家
-    R2: [[921, 747], [1336, 813]]
-    R7: [[661, 745], [441, 747]]
-    B1: [[1990, 300], [85, 750]] # 一个点在红方基地后，防偷家
-    B2: [[1900, 755], [1460, 688]]
-    B7: [[2142, 747], [2337, 750]]
+    R1: [[1065, 1083], [1005, 375]]  # (两个吊射点) [2645, 700](对面家，防英雄偷家)
+    R2: [[921, 747], [229, 109]]  # (银矿，兑矿区) [1336, 813](金矿)
+    R7: [[661, 745], [397, 821]]
+    B1: [[1717, 381], [1797, 1125]] # [85, 750]
+    B2: [[1900, 755], [2549, 1401]] # [1460, 688]
+    B7: [[2142, 747], [2405, 681]]
 
 ui:
   info_panel_size: [420, 500]  # 信息面板尺寸
